--- a/.github/workflows/cross.yml
+++ b/.github/workflows/cross.yml
@@ -62,6 +62,28 @@ jobs:
     - name: Run test
       run: cargo wasi test
 
+  build-windows:
+    strategy:
+      matrix:
+        toolchain: [aarch64-pc-windows-msvc]
+    runs-on: windows-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/cache@v3
+      continue-on-error: true
+      with:
+        path: |
+          ~/.cargo/bin/
+          ~/.cargo/registry/index/
+          ~/.cargo/registry/cache/
+          ~/.cargo/git/db/
+          target/
+        key: ${{ runner.os }}-${{ matrix.toolchain }}-stable-cargo-${{ hashFiles('**/Cargo.lock') }}
+    - name: Install toolchain
+      run: rustup target add ${{ matrix.toolchain }}
+    - name: Build
+      run: cargo build -p yozuk --target=${{ matrix.toolchain }} --all-features
+
   build-macos:
     strategy:
       matrix:
