--- a/yozuk-wasm/tsconfig.json
+++ b/yozuk-wasm/tsconfig.json
@@ -2,7 +2,21 @@
   "compilerOptions": {
     "module": "es2020",
     "target": "es2020",
+    "lib": [
+      "es2017",
+      "es7",
+      "es6",
+      "dom"
+    ],
+    "declaration": true,
+    "outDir": ".",
     "moduleResolution": "node",
+    "strict": true,
+    "esModuleInterop": true,
     "skipLibCheck": true
-  }
+  },
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
