--- a/yozuk-wasm/package.json
+++ b/yozuk-wasm/package.json
@@ -17,7 +17,8 @@
   },
   "files": [
     "*.d.ts",
-    "*.js"
+    "*.js",
+    "scripts/*.js"
   ],
   "devDependencies": {
     "typescript": "^4.7.4"
