--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -66,6 +66,7 @@ uuid = { version = "1.0.0", features = ["v4"], optional = true }
 yozuk-helper-english = "0.20.6"
 yozuk-helper-platform = "0.20.2"
 yozuk-helper-filetype = "0.20.6"
+yozuk-helper-encoding = "0.20.10"
 yozuk-sdk = "0.20.6"
 once_cell = "1.12.0"
 rmpv = { version = "1.0.0", optional = true, features = ["with-serde"] }
