--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -115,3 +115,4 @@ yozuk-skill-time = ["time", "time-tz"]
 yozuk-skill-ip = []
 yozuk-skill-msgpack = ["rmpv"]
 yozuk-skill-unicode = ["unicode_reader"]
+yozuk-skill-hex = []
