--- a/deny.toml
+++ b/deny.toml
@@ -80,7 +80,9 @@ allow = [
     "BSL-1.0",
     "ISC",
     "OpenSSL",
-    "Zlib"
+    "Zlib",
+    "Unicode-DFS-2016",
+    "MPL-2.0"
 ]
 # List of explicitly disallowed licenses
 # See https://spdx.org/licenses/ for list of possible licenses
