--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,9 +29,15 @@ jobs:
       - name: Install apt packages
         run: sudo apt-get install -y libseccomp-dev
       - name: Build project
-        run: cargo b --bin zuk --release
+        run: cargo b --release
       - name: Make archive
         run: tar -C target/release -Jcvf zuk-x86_64-unknown-linux-gnu.tar.xz zuk
+      - name: Make archive
+        run: tar -C target/release -Jcvf yozuk-discord-x86_64-unknown-linux-gnu.tar.xz yozuk-discord
+      - name: Make archive
+        run: tar -C target/release -Jcvf yozuk-slack-x86_64-unknown-linux-gnu.tar.xz yozuk-slack
+      - name: Make archive
+        run: tar -C target/release -Jcvf yozuk-telegram-x86_64-unknown-linux-gnu.tar.xz yozuk-telegram
       - name: Create release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
