--- a/bots/discord/Cargo.toml
+++ b/bots/discord/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "yozuk-discord"
-version = "0.1.0"
+version = "0.21.2"
 edition = "2021"
 license = "MIT"
 
@@ -12,7 +12,13 @@ clap = { version = "3.2.16", features = ["env"] }
 futures = "0.3.21"
 lazy-regex = "2.3.0"
 mediatype = "0.19.5"
-serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "http"] }
+serenity = { version = "0.11.5", default-features = false, features = [
+  "client",
+  "gateway",
+  "rustls_backend",
+  "model",
+  "http",
+] }
 tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
 yozuk = { version = "0.21.2", features = ["rayon"] }
 yozuk-sdk = "0.21.0"
