--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -74,6 +74,8 @@ shell-words = "1.1.0"
 thousands = "0.2.0"
 unicode_reader = { version = "1.0.2", optional = true }
 md4 = { version = "0.10.1", optional = true }
+bcrypt = { version = "0.13.0", optional = true }
+scrypt = "0.10.0"
 
 [features]
 default = []
@@ -116,3 +118,4 @@ yozuk-skill-ip = []
 yozuk-skill-msgpack = ["rmpv"]
 yozuk-skill-unicode = ["unicode_reader"]
 yozuk-skill-hex = []
+yozuk-skill-kdf = ["bcrypt"]
