--- a/yozuk/Cargo.toml
+++ b/yozuk/Cargo.toml
@@ -60,6 +60,7 @@ default-skills = [
   "yozuk-skill-msgpack",
   "yozuk-skill-unicode",
   "yozuk-skill-hex",
+  "yozuk-skill-kdf",
 ]
 yozuk-skill-base64 = ["yozuk-core-skillset/yozuk-skill-base64"]
 yozuk-skill-calc = ["yozuk-core-skillset/yozuk-skill-calc"]
@@ -88,6 +89,7 @@ yozuk-skill-ip = ["yozuk-core-skillset/yozuk-skill-ip"]
 yozuk-skill-msgpack = ["yozuk-core-skillset/yozuk-skill-msgpack"]
 yozuk-skill-unicode = ["yozuk-core-skillset/yozuk-skill-unicode"]
 yozuk-skill-hex = ["yozuk-core-skillset/yozuk-skill-hex"]
+yozuk-skill-kdf = ["yozuk-core-skillset/yozuk-skill-kdf"]
 
 [dev-dependencies]
 once_cell = "1.12.0"
