--- a/bots/slack/Cargo.toml
+++ b/bots/slack/Cargo.toml
@@ -19,3 +19,6 @@ mediatype = "0.19.5"
 futures-util = "0.3.21"
 gh-emoji = "1.0.7"
 lazy-regex = "2.3.0"
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+yozuk = { version = "0.21.3", features = ["rayon"] }
