--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -77,6 +77,8 @@ md4 = { version = "0.10.1", optional = true }
 bcrypt = { version = "0.13.0", optional = true }
 scrypt = { version = "0.10.0", optional = true }
 argon2 = { version = "0.4.1", optional = true, default-features = false, features = ["alloc", "password-hash"] }
+balloon-hash = { version = "0.3.0", optional = true, default-features = false, features = ["alloc", "password-hash"] }
+crypto-bigint = { version = "0.4.8", optional = true, default-features = false, features = ["generic-array"] }
 
 [features]
 default = []
@@ -119,4 +121,4 @@ yozuk-skill-ip = []
 yozuk-skill-msgpack = ["rmpv"]
 yozuk-skill-unicode = ["unicode_reader"]
 yozuk-skill-hex = []
-yozuk-skill-kdf = ["bcrypt", "scrypt", "argon2"]
+yozuk-skill-kdf = ["bcrypt", "scrypt", "argon2", "balloon-hash", "crypto-bigint", "sha2", "sha3"]
