--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "yozuk-core-skillset"
-version = "0.21.3"
+version = "0.22.0"
 edition = "2021"
 authors = ["picoHz <picoHz@outlook.com>"]
 description = "Set of default Yozuk skills"
@@ -76,9 +76,17 @@ unicode_reader = { version = "1.0.2", optional = true }
 md4 = { version = "0.10.1", optional = true }
 bcrypt = { version = "0.13.0", optional = true }
 scrypt = { version = "0.10.0", optional = true }
-argon2 = { version = "0.4.1", optional = true, default-features = false, features = ["alloc", "password-hash"] }
-balloon-hash = { version = "0.3.0", optional = true, default-features = false, features = ["alloc", "password-hash"] }
-crypto-bigint = { version = "0.4.8", optional = true, default-features = false, features = ["generic-array"] }
+argon2 = { version = "0.4.1", optional = true, default-features = false, features = [
+  "alloc",
+  "password-hash",
+] }
+balloon-hash = { version = "0.3.0", optional = true, default-features = false, features = [
+  "alloc",
+  "password-hash",
+] }
+crypto-bigint = { version = "0.4.8", optional = true, default-features = false, features = [
+  "generic-array",
+] }
 
 [features]
 default = []
@@ -121,4 +129,12 @@ yozuk-skill-ip = []
 yozuk-skill-msgpack = ["rmpv"]
 yozuk-skill-unicode = ["unicode_reader"]
 yozuk-skill-hex = []
-yozuk-skill-kdf = ["bcrypt", "scrypt", "argon2", "balloon-hash", "crypto-bigint", "sha2", "sha3"]
+yozuk-skill-kdf = [
+  "bcrypt",
+  "scrypt",
+  "argon2",
+  "balloon-hash",
+  "crypto-bigint",
+  "sha2",
+  "sha3",
+]
