--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -53,7 +53,7 @@ serde_json = "1.0.79"
 sha1 = { version = "0.10.1", optional = true }
 sha2 = { version = "0.10.2", optional = true }
 sha3 = { version = "0.10.1", optional = true }
-strum = { version = "0.24.0", features = ["derive"] }
+strum = "0.24.0"
 thiserror = "1.0.30"
 time = { version = "0.3.9", features = [
   "formatting",
@@ -87,6 +87,7 @@ balloon-hash = { version = "0.3.0", optional = true, default-features = false, f
 crypto-bigint = { version = "0.4.8", optional = true, default-features = false, features = [
   "generic-array",
 ] }
+strum_macros = "0.24.3"
 
 [features]
 default = []
