--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -88,6 +88,7 @@ crypto-bigint = { version = "0.4.8", optional = true, default-features = false, 
   "generic-array",
 ] }
 strum_macros = "0.24.3"
+flate2 = "1.0.24"
 
 [features]
 default = []
