--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -88,7 +88,7 @@ crypto-bigint = { version = "0.4.8", optional = true, default-features = false, 
   "generic-array",
 ] }
 strum_macros = "0.24.3"
-flate2 = "1.0.24"
+flate2 = { version = "1.0.24", optional = true }
 
 [features]
 default = []
@@ -140,3 +140,4 @@ yozuk-skill-kdf = [
   "sha2",
   "sha3",
 ]
+yozuk-skill-compression = ["flate2"]
