--- a/yozuk/Cargo.toml
+++ b/yozuk/Cargo.toml
@@ -61,6 +61,7 @@ default-skills = [
   "yozuk-skill-unicode",
   "yozuk-skill-hex",
   "yozuk-skill-kdf",
+  "yozuk-skill-compression",
 ]
 yozuk-skill-base64 = ["yozuk-core-skillset/yozuk-skill-base64"]
 yozuk-skill-calc = ["yozuk-core-skillset/yozuk-skill-calc"]
@@ -90,6 +91,7 @@ yozuk-skill-msgpack = ["yozuk-core-skillset/yozuk-skill-msgpack"]
 yozuk-skill-unicode = ["yozuk-core-skillset/yozuk-skill-unicode"]
 yozuk-skill-hex = ["yozuk-core-skillset/yozuk-skill-hex"]
 yozuk-skill-kdf = ["yozuk-core-skillset/yozuk-skill-kdf"]
+yozuk-skill-compression = ["yozuk-core-skillset/yozuk-skill-compression"]
 
 [dev-dependencies]
 once_cell = "1.12.0"
