--- a/bots/slack/Cargo.toml
+++ b/bots/slack/Cargo.toml
@@ -16,9 +16,11 @@ anyhow = "1.0.58"
 clap = { version = "3.2.16", features = ["env"] }
 tempfile = "3.3.0"
 mediatype = "0.19.5"
-futures-util = "0.3.21"
 gh-emoji = "1.0.7"
 lazy-regex = "2.3.0"
+websocket-lite = "0.5.2"
+futures = "0.3.21"
+serde_json = "1.0.83"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 yozuk = { version = "0.22.4", features = ["rayon"] }
