--- a/deny.toml
+++ b/deny.toml
@@ -47,9 +47,7 @@ yanked = "warn"
 notice = "warn"
 # A list of advisory IDs to ignore. Note that ignored advisories will still
 # output a note when they are encountered.
-ignore = [
-    "RUSTSEC-2020-0159",
-]
+ignore = []
 # Threshold for security vulnerabilities, any vulnerability with a CVSS score
 # lower than the range specified will be ignored. Note that ignored advisories
 # will still output a note when they are encountered.
@@ -81,8 +79,7 @@ allow = [
     "ISC",
     "OpenSSL",
     "Zlib",
-    "Unicode-DFS-2016",
-    "MPL-2.0"
+    "Unicode-DFS-2016"
 ]
 # List of explicitly disallowed licenses
 # See https://spdx.org/licenses/ for list of possible licenses
