--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -90,6 +90,7 @@ crypto-bigint = { version = "0.4.8", optional = true, default-features = false, 
 strum_macros = "0.24.3"
 flate2 = { version = "1.0.24", optional = true }
 snap = { version = "1.0.5", optional = true }
+lz4_flex = { version = "0.9.4", optional = true }
 
 
 [features]
@@ -142,5 +143,5 @@ yozuk-skill-kdf = [
   "sha2",
   "sha3",
 ]
-yozuk-skill-compression = ["flate2", "snap"]
+yozuk-skill-compression = ["flate2", "snap", "lz4_flex"]
 yozuk-skill-username = []
