--- a/skillset/Cargo.toml
+++ b/skillset/Cargo.toml
@@ -118,7 +118,7 @@ yozuk-skill-nanoid = ["nanoid"]
 yozuk-skill-numeric = []
 yozuk-skill-password = ["rand"]
 yozuk-skill-punycode = ["punycode"]
-yozuk-skill-smalltalk = ["rand"]
+yozuk-skill-chitchat = ["rand"]
 yozuk-skill-unit = ["num-bigint"]
 yozuk-skill-uuid = ["uuid"]
 yozuk-skill-version = []
