--- a/yozuk/Cargo.toml
+++ b/yozuk/Cargo.toml
@@ -35,7 +35,7 @@ rayon = ["dep:rayon", "yozuk-model/rayon", "yozuk-core-skillset/rayon"]
 default-skills = [
   "yozuk-skill-version",
   "yozuk-skill-base64",
-  "yozuk-skill-smalltalk",
+  "yozuk-skill-chitchat",
   "yozuk-skill-numeric",
   "yozuk-skill-calc",
   "yozuk-skill-uuid",
@@ -75,7 +75,7 @@ yozuk-skill-nanoid = ["yozuk-core-skillset/yozuk-skill-nanoid"]
 yozuk-skill-numeric = ["yozuk-core-skillset/yozuk-skill-numeric"]
 yozuk-skill-password = ["yozuk-core-skillset/yozuk-skill-password"]
 yozuk-skill-punycode = ["yozuk-core-skillset/yozuk-skill-punycode"]
-yozuk-skill-smalltalk = ["yozuk-core-skillset/yozuk-skill-smalltalk"]
+yozuk-skill-chitchat = ["yozuk-core-skillset/yozuk-skill-chitchat"]
 yozuk-skill-unit = ["yozuk-core-skillset/yozuk-skill-unit"]
 yozuk-skill-uuid = ["yozuk-core-skillset/yozuk-skill-uuid"]
 yozuk-skill-version = ["yozuk-core-skillset/yozuk-skill-version"]
